--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light Dark Mode</title>
+    <title>Portfolio</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
@@ -25,18 +25,19 @@
         <a href="#home">HOME</a>
         <a href="#about">ABOUT</a>
         <a href="#projects">PROJECTS</a>
-        <a href="#home">CONTACT</a>
+        <a href="#skills">SKILLS</a>
+        <a href="#education">EDUCATION</a>
     </nav>
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
-            <h1>Custom Title</h1>
-            <h2>Welcome to the Website</h2>
+            <h1>Lee Molton</h1>
+            <h2>Website Developer</h2>
         </div>
     </section>
     <!-- About Section -->
     <section id="about">
-        <h1>Undraw Illustrations</h1>
+        <h1>About Me</h1>
         <div class="about-container">
             <div class="image-container">
                 <h2>Web Innovation</h2>
@@ -54,21 +55,43 @@
     </section>
     <!-- Projects Section -->
     <section id="projects">
-        <h1>Buttons</h1>
-        <div class="buttons">
-            <button class="primary">Primary</button>
-            <button class="secondary">Secondary</button>
-            <button class="primary" disabled>Disabled</button>
-            <button class="outline">Outline</button>
-            <button class="secondary outline">Alt Outline</button>
-            <button class="outline" disabled>Disabled</button>
-        </div>
-        <div class="text-box" id="text-box">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique velit temporibus dicta. Corrupti, eveniet modi id numquam asperiores ratione, voluptates veritatis excepturi sit itaque unde? Consequuntur aliquid quo nemo laudantium!</p>
+        <h1>Projects</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>ToffeeTalk</h2>
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Riddle Me!</h2>
+                <img src="img/undraw_feeling_proud_light.svg" alt="Proud Coder" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>Minor Projects</h2>
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Idea" id="image3">
+            </div>
         </div>
     </section>
-    <!-- Contact Section -->
-    <section id="contact">
+     <!-- Skills Section -->
+     <section id="skills">
+     <!-- Add to page - JavaScript, HTML, CSS, Python -->
+        <h1>Skills</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>ToffeeTalk</h2>
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Riddle Me!</h2>
+                <img src="img/undraw_feeling_proud_light.svg" alt="Proud Coder" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>Minor Projects</h2>
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Idea" id="image3">
+            </div>
+        </div>
+    </section>    
+    <!-- Education Section -->
+    <section id="education">
         <div class="social-icons">
             <i class="fab fa-github"></i>
             <i class="fab fa-codepen"></i>
